--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.shoppinglist">
+    package="com.example.shoppingList">
 
     <application
         android:allowBackup="true"
@@ -25,7 +25,7 @@
 
         <provider
             android:name=".data.ShopListProvider"
-            android:authorities="com.example.shoppinglist"
+            android:authorities="com.example.shoppingList"
             android:exported="true" />
     </application>
 
